Possible compatibility problems with earlier versions marked with '*'.

--- (IN PROGRESS)

New function yaz_log_reopen which reopens log file (for log rotate, etc.)

* Blocking parameter for COMSTACK cs_create is now a bit mask rather
than a blocking flag. Bit 0 is set for blocking, reset for non-blocking.
Bit 1 is set if cs_addrstr should avoid DNS lookup; reset for full
DNS lookup. There should not be any compatibility problems with this
assuming that blocking=1 or 0 is used.

Fix bad reference in UNIX comstack in function cs_addrstr.

Fix for AIX compile.

The generic front-end server (server/seshigh.c) now supports returning
Init diagnostics to the client in User-information-field, in
accordance with Z35.90 Implementor Agreement 5 (Returning diagnostics
in an InitResponse)

--- 2.0.4 2003/09/04

Allow any CQL relation (not just all,any,exact,scr).

Fixes for OCLC UI ASN.1 to make it work with SilverPlatter targets
that features the same UI.

Implemented command update0 in YAZ client which is equivalent to
update but uses old of Ext Update ASN.1.

Use OID 1.2.840.10003.15.1000.81.1 for privately defined charsets
in charset negotiation. Added VAL_ID_CHARSET in oid.h.
Previously no OID was used for this info.

ZOOM uses smallSetUpperBound=1 instead of 0 for piggyback searches.
It apparantely upsets EBSCO Publishing IR Z39.50 Server which
returns 'malformed search term' otherwise.

SortResponse member resultCount now set to NULL in sort handler of
frontend server.

OPAC support ZOOM. ZOOM_record_get returns OPAC info (as XML) if
type is "opac".

Add three new utility functions for translating OIDs between various
formats -- symbolic name such as "Usmarc", minus-1-terminated int
arrays and dotted strings such as "1.2.840.10003.9.5.1":
 int *oid_name_to_oid(oid_class oclass, const char *name, int *oid);
 char *oid_to_dotstring(const int *oid, char *oidbuf);
 char *oid_name_to_dotstring(oid_class oclass, const char *name, char *oidbuf);
